--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="scroll-smooth">
+<html lang="es" class="scroll-smooth dark">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,14 +17,45 @@
             referrerpolicy="no-referrer" />
         <title>App Travel</title>
     </head>
-    <body class="font-Montserrat">
+    <body class="font-Montserrat dark:bg-gray-900">
         <header>
-            <nav></nav>
+            <nav class="w-full h-14 hidden bg-white lg:flex p-4 justify-between fixed z-10 dark:bg-gray-800">
+                <div class="h-auto w-auto">
+                    <p class="text-xl text-primary font-black dark:text-white">App Travel</p>
+                </div>
+                <div class="flex space-x-8">
+                    <a class="font-bold text-base text-primary dark:text-white" href="#home">Inicio</a>
+                    <a class="font-bold text-base text-primary dark:text-white" href="#recomendados">Recomendados</a>
+                    <a class="font-bold text-base text-primary dark:text-white" href="#alquileres_destacados">Alquileres Destacados</a>
+                    <a class="font-bold text-base text-primary dark:text-white" href="#usuario">Registrate</a>
+                    <a class="font-bold text-base text-primary dark:text-white" href="#faqs">FAQS</a>
+                    <a class="font-bold text-base text-primary dark:text-white" href="#sobre_nosotros">Sobre nosotros</a>
+                </div>
+                <div class="flex space-x-4">
+                    <button>
+                        <svg width="20" height="20" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="fill-current text-primary dark:text-white" fill-rule="evenodd" clip-rule="evenodd" d="M6 1.99997C4.93913 1.99997 3.92172 2.4214 3.17157 3.17155C2.42143 3.92169 2 4.93911 2 5.99997C2 7.06084 2.42143 8.07825 3.17157 8.8284C3.92172 9.57855 4.93913 9.99997 6 9.99997C7.06087 9.99997 8.07828 9.57855 8.82843 8.8284C9.57857 8.07825 10 7.06084 10 5.99997C10 4.93911 9.57857 3.92169 8.82843 3.17155C8.07828 2.4214 7.06087 1.99997 6 1.99997ZM1.13461e-07 5.99997C-0.00012039 5.05568 0.222642 4.12468 0.650171 3.28271C1.0777 2.44074 1.69792 1.71157 2.4604 1.1545C3.22287 0.597426 4.10606 0.228185 5.03815 0.0768059C5.97023 -0.0745733 6.92488 -0.00381595 7.82446 0.283323C8.72404 0.570462 9.54315 1.06587 10.2152 1.72927C10.8872 2.39266 11.3931 3.20531 11.6919 4.10111C11.9906 4.9969 12.0737 5.95056 11.9343 6.88452C11.795 7.81848 11.4372 8.70637 10.89 9.47597L15.707 14.293C15.8892 14.4816 15.99 14.7342 15.9877 14.9964C15.9854 15.2586 15.8802 15.5094 15.6948 15.6948C15.5094 15.8802 15.2586 15.9854 14.9964 15.9876C14.7342 15.9899 14.4816 15.8891 14.293 15.707L9.477 10.891C8.57936 11.5293 7.52335 11.9081 6.42468 11.9861C5.326 12.0641 4.22707 11.8381 3.2483 11.3329C2.26953 10.8278 1.44869 10.063 0.875723 9.12232C0.30276 8.18165 -0.000214051 7.10141 1.13461e-07 5.99997Z" fill="#3F3F46"/>
+                        </svg>
+                    </button>
+                    <button class="toggle">
+                        <svg width="20" height="20" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" id="toggle">
+                            <path class="fill-current dark:text-white" d="M15.293 11.293C13.8115 11.9631 12.161 12.1658 10.5614 11.8742C8.96175 11.5826 7.48895 10.8105 6.33919 9.66079C5.18944 8.51104 4.41734 7.03824 4.12574 5.4386C3.83415 3.83897 4.03691 2.18846 4.70701 0.70697C3.52758 1.23998 2.49505 2.05117 1.69802 3.07093C0.900987 4.09069 0.363244 5.28859 0.130924 6.56186C-0.101395 7.83512 -0.0213565 9.14574 0.364174 10.3813C0.749705 11.6168 1.42922 12.7404 2.34442 13.6556C3.25961 14.5708 4.38318 15.2503 5.61871 15.6358C6.85424 16.0213 8.16486 16.1014 9.43813 15.8691C10.7114 15.6367 11.9093 15.099 12.9291 14.302C13.9488 13.5049 14.76 12.4724 15.293 11.293Z" fill="#3F3F46"/>
+                        </svg>
+                    </button>
+                    <button>
+                        <svg width="20" height="20" viewBox="0 0 25 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="fill-current text-gray-300" fill-rule="evenodd" clip-rule="evenodd" d="M2.78225 17.6464C4.4799 15.2799 7.48651 13.4999 12.4999 13.4999C17.5132 13.4999 20.5199 15.2799 22.2175 17.6464C23.8582 19.9336 24.1196 22.5552 24.1248 24.0058C24.13 25.4645 22.9071 26.4166 21.6533 26.4166H3.34642C2.09262 26.4166 0.869709 25.4645 0.874956 24.0058C0.880174 22.5552 1.1415 19.9336 2.78225 17.6464Z" fill="#F2F2F2"/>
+                            <path class="fill-current text-gray-300" fill-rule="evenodd" clip-rule="evenodd" d="M12.5 10.9166C15.3535 10.9166 17.6667 8.60339 17.6667 5.74992C17.6667 2.89645 15.3535 0.583252 12.5 0.583252C9.64653 0.583252 7.33334 2.89645 7.33334 5.74992C7.33334 8.60339 9.64653 10.9166 12.5 10.9166Z" fill="#F2F2F2"/>
+                        </svg>
+                    </button>
+                    
+                </div>
+            </nav>
         </header>
 
         <main>
             <section class="w-full h-auto">
-                <div id="home">
+                <div class="w-full h-3/4" id="home">
                     <div class="w-full h-3/4">
                         <div
                             class="w-full h-full flex flex-col absolute space-y-96 py-4 items-center lg:space-y-0 lg:items-start lg:pt-20 lg:justify-start">
@@ -46,12 +77,12 @@
                     </div>
                 </div>
 
-                <div class="p-6" id="recomendados">
-                    <p class="text-3xl font-semibold text-primary text-center">
+                <div class="w-full h-auto" id="recomendados">
+                    <p class="text-3xl font-semibold text-primary text-center pl-6 pt-6">
                         Recomendados
                     </p>
                     <div
-                        class="w-auto h-72 items-center mt-6 overflow-x-auto overscroll-x-contain flex space-x-6 scrollbar-hide overflow-y-hidden">
+                        class="w-auto h-72 p-6 items-center mt-6 overflow-x-auto overscroll-x-contain flex space-x-6 scrollbar-hide overflow-y-hidden">
                         <div class="Card">
                             <div
                                 class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
@@ -83,7 +114,7 @@
                                 class="w-full h-3/5 rounded-t-lg bg-yosemite bg-cover"></div>
                             <div
                                 class="w-full h-2/5 bg-secondary rounded-b-lg text-center">
-                                <p class="text-white font-bold text-xl px-4 py-2">
+                                <p class="text-white font-bold text-lg px-4 py-2">
                                     Parque Nacional Yosemite
                                 </p>
                                 <p class="text-white text-base px-4">
@@ -120,41 +151,51 @@
                     </div>
                 </div>
 
-                <div class="px-2 h-auto w-full" id="alquileres_destacados">
-                    <p
-                        class="text-3xl text-primary font-semibold pb-6 mt-6 text-center">
-                        Alquileres destacados
-                    </p>
+                <div id="alquileres_destacados" class="p-6 h-full w-full">
+                    <p class="text-3xl text-primary font-semibold text-center">Alquileres Destacados</p>
                     <div
-                        class="w-full h-auto flex flex-col space-y-6 items-center justify-center">
-                        <div class="w-full h-96 bg-chicago bg-cover rounded-xl">
-                            <p class="CardTitle">Chicago</p>
-                            <p class="text-sm text-black pl-8 mr-24">
-                                2 habitaciones, baño y cocina
-                            </p>
+                      class="w-full h-full flex flex-col space-y-4 items-center justify-center mt-6"
+                    >
+                      <div
+                        class="w-full h-96 bg-chicago bg-cover rounded-xl lg:h-[38rem] lg:text-right lg:bg-center lg:pt-12"
+                      >
+                        <p class="cardTitle lg:text-3xl lg:text-black lg:text-center lg:mb-3">Chicago</p>
+                        <p class="text-sm pl-8 text-white mr-24 lg:mr-8 lg:text-base lg:text-center lg:text-black">
+                          2 habitaciones, baño y cocina.
+                        </p>
+                      </div>
+                      <div
+                        class="w-full h-full grid grid-cols-1 lg:grid-cols-5 lg:grid-rows-2 lg:place-items-center lg:place-content-stretch gap-4"
+                      >
+                        <div
+                          class="w-full h-96 bg-LA bg-cover rounded-xl lg:row-span-2 lg:col-span-2 lg:h-[49rem] lg:text-right lg:bg-center lg:pt-12"
+                        >
+                          <p class="cardTitle lg:text-3xl lg:text-white lg:text-center lg:mb-3">Los Angeles</p>
+                          <p class="text-sm pl-8 text-white mr-24 lg:mr-8 lg:text-base lg:text-center">
+                            4 habitaciones, 3 baños, cocina y piscina.
+                          </p>
                         </div>
-                        <div class="w-full h-96 bg-LA bg-cover rounded-xl">
-                            <p class="CardTitle">Los Angeles</p>
-                            <p class="text-sm text-white pl-8 mr-24">
-                                4 habitaciones, 3 baños, cocina, y piscina
-                            </p>
+                        <div
+                          class="w-full h-96 bg-miami bg-cover rounded-xl lg:row-span-1 lg:col-span-3 lg:text-right lg:bg-center lg:pt-12"
+                        >
+                          <p class="cardTitle lg:text-3xl lg:text-white lg:text-center lg:mb-3">Miami</p>
+                          <p class="text-sm pl-8 text-white mr-24 lg:mr-8 lg:text-base lg:text-center">
+                            3 habitaciones, 2 baños, cocina y vista al mar.
+                          </p>
                         </div>
-                        <div class="w-full h-96 bg-miami bg-cover rounded-xl">
-                            <p class="CardTitle">Miami</p>
-                            <p class="text-sm text-white pl-8 mr-24">
-                                3 habitaciones, 2 baños, cocina y vista al mar
-                            </p>
+                        <div
+                          class="w-full h-96 bg-bali bg-cover rounded-xl lg:row-span-1 lg:col-span-3 lg:text-right lg:bg-center lg:pt-12"
+                        >
+                          <p class="cardTitle lg:text-3xl lg:text-white lg:text-center lg:mb-3">Bali</p>
+                          <p class="text-sm pl-8 text-white mr-24 lg:mr-8 lg:text-base lg:text-center">
+                            2 habitaciones, 2 baños, cocina y piscina.
+                          </p>
                         </div>
-                        <div class="w-full h-96 bg-bali bg-cover rounded-xl">
-                            <p class="CardTitle">Bali</p>
-                            <p class="text-sm text-white pl-8 mr-24">
-                                2 habitaciones, 2 baños, cocina y piscina
-                            </p>
-                        </div>
+                      </div>
                     </div>
-                </div>
+                  </div>
 
-                <div class="flex items-center justify-center h-auto bg-gray-100" id="usuario">
+                <div class="flex items-center justify-center h-auto" id="usuario">
                     <div class="px-8 py-6 mx-4 mt-4 text-left bg-white shadow-lg md:w-1/3 lg:w-1/3 sm:w-1/3">
                         <h3 class="text-2xl font-bold text-center">Registrate</h3>
                         <form action="#">
@@ -194,10 +235,10 @@
                     </div>
                 </div>
 
-                <div class="w-full h-auto flex flex-col space-y-4" id="faqs">
+                <div class="w-full h-auto flex flex-col space-y-4 dark:text-white" id="faqs">
                     <div>
                         <p
-                            class="text-3xl text-primary text-center font-semibold mt-6">
+                            class="text-3xl text-primary text-center font-semibold mt-6 lg:text-left lg:ml-1">
                             FAQS
                         </p>
                     </div>
@@ -250,7 +291,7 @@
             </section>
         </main>
 
-        <footer class="w-full h-auto bg-gray-50 p-6 space-y-2">
+        <footer class="w-full h-auto bg-gray-50 p-6 space-y-2" id="sobre_nosotros">
             <p class="text-lg text-gray-500">Acerca de</p>
             <ul class="text-sm text-gray-400">
                 <li><a href="#">Inversiones</a></li>
@@ -263,7 +304,7 @@
         </footer>
 
         <div
-            class="w-full h-16 bg-white fixed left-0 bottom-0 shadow-md flex space-x-8 items-center justify-center lg:hidden"
+            class="w-full h-16 bg-white fixed left-0 bottom-0 shadow-md flex space-x-8 items-center justify-center lg:hidden dark:bg-gray-800"
             id="tab_bar">
             <a href="#home">
                 <svg
@@ -308,8 +349,7 @@
                         fill="#3F3F46" />
                 </svg>
             </a>
-            <a href="">
-                <button>
+                <button class="toggle">
                     <svg
                         width="30"
                         height="30"
@@ -322,7 +362,6 @@
                             fill="#3F3F46" />
                     </svg>
                 </button>
-            </a>
             <a href="#usuario">
                 <svg
                     width="30"
@@ -344,5 +383,15 @@
                 </svg>
             </a>
         </div>
+
+        <script>
+            const htmlElement = document.querySelector('html');
+            const toggleButton = document.querySelectorAll('.toggle');
+                toggleButton.forEach( item => {
+                    item.addEventListener('click', () => {
+                    htmlElement.classList.toggle('dark');
+                    });
+                });
+        </script>
     </body>
 </html>
